update deprecated initialization in FmpTools