@@ -142,8 +142,8 @@ public class FmpTools  extends Plugin {
 		final Integer[] indexes = new Integer[n];
 		final Double[] data = new Double[n];
 		for (int i=0; i<n; i++) {
-			indexes[i] = new Integer(i);
-			data[i] = new Double(values[i]);
+			indexes[i] = Integer.valueOf(i);
+			data[i] = Double.valueOf(values[i]);
 		}
 		Arrays.sort(indexes, new Comparator<Integer>() {
 			public int compare(final Integer o1, final Integer o2) {
@@ -161,7 +161,7 @@ public class FmpTools  extends Plugin {
 		int n = data.length;
 		final Integer[] indexes = new Integer[n];
 		for (int i=0; i<n; i++)
-			indexes[i] = new Integer(i);
+			indexes[i] = Integer.valueOf(i);
 		Arrays.sort(indexes, new Comparator<Integer>() {
 			public int compare(final Integer o1, final Integer o2) {
 				return data[o1].compareToIgnoreCase(data[o2]);
